--- a/index.html
+++ b/index.html
@@ -7,37 +7,25 @@
   <link href='/style.css' rel='stylesheet'>
 </head>
 <body>
-  <h1>ruang Bangun Persegi</h1>
+  <h1>Ruang Bangun Persegi</h1>
 
 <div class="tengah">
-
   <div class="card">
-    <h1>ruang Bangun Persegi</h1>
+    <h1>Ruang Bangun Persegi</h1>
     <div class="cardbody">
 
       <form>
-
-        <input type="text" name="txNAMA" id="txNAMA" class="txNAMA">
-        <input type="number">
-        <input type="date">
-        <input type="color">
-        <input type="password">
-        <input type="submit" value="Kirim">
-        <input type="checkbox"> Pilih 1
-
-        <select>
-          <option>Pilihan 1</option>
-          <option>Pilihan 2</option>
-        </select>
-
+        <label> Nilai Panjang</label>
+          <input type="text" id="PJ">
+        <label>Nilai Lebar</label>
+          <input type="text" id="LB">
       </form>
 
     </div>
     <div class="cardfooter">
-
+      <button class="btn1">Hitung</button>
     </div>
   </div>
 </div>
-
 </body>
 </html>
