css menghitung bangun ruang

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="tengah">
   <div class="card">
-    <h1>Ruang Bangun Persegi</h1>
+    <h1>Luas Ruang Bangun Persegi</h1>
     <div class="cardbody">
 
       <form>
