--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello World</title>
+  <title>Hitung Luas Ruang Bangun</title>
   <link href='/style.css' rel='stylesheet'>
 </head>
 <body>
@@ -20,7 +20,7 @@
         <label>Nilai Lebar</label>
           <input type="text" id="LB">
       </form>
-
+      <div class="hsl" id="hasil">Hasil</div>
     </div>
      <div class="cardfooter">
        <button class="btn1" onclick="hitung()">Hitung</button>
@@ -33,7 +33,16 @@
   var pj = document.getElementById("PJ").value
   var lb = document.getElementById("LB").value
   var luas = pj*lb
-  console.log(luas)
+  var res = "Hitung Luas Persegi<br>Nilai Panjang"+pj+", dan lebarnya"+lb+" menjadi:<br>Luas = Panjang X Lebar<br> Luas = "+pj+" X " + lb+"<br>Luas ="+luas
+  var pjlb = Number(pj) + parseFloat(lb)
+  var kll = 2*pjlb
+  res += "<br><br>Keliling Persegi<br>Keliling = 2 X (Panjang+Lebar)"
+  res += "<br>Keliling = 2 X (" +pj+ "+" +lb+ ")"
+  res +="<br> Keliling = 2 X "+pjlb
+  res +="<br> Keliling = "+kll
+  document.getElementById("hasil").innerHTML=res
+
+  //console.log(res)
   }
 </script>
 
